; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/malo/extr_if_malo.c_malo_desc_cleanup.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/malo/extr_if_malo.c_malo_desc_cleanup.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.malo_softc = type { i32 }
%struct.malo_descdma = type { i32, i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.malo_softc*, %struct.malo_descdma*)* @malo_desc_cleanup to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @malo_desc_cleanup(%struct.malo_softc* %0, %struct.malo_descdma* %1) #0 {
  %3 = alloca %struct.malo_softc*, align 8
  %4 = alloca %struct.malo_descdma*, align 8
  store %struct.malo_softc* %0, %struct.malo_softc** %3, align 8
  store %struct.malo_descdma* %1, %struct.malo_descdma** %4, align 8
  %5 = load %struct.malo_descdma*, %struct.malo_descdma** %4, align 8
  %6 = getelementptr inbounds %struct.malo_descdma, %struct.malo_descdma* %5, i32 0, i32 0
  %7 = load i32, i32* %6, align 4
  %8 = load %struct.malo_descdma*, %struct.malo_descdma** %4, align 8
  %9 = getelementptr inbounds %struct.malo_descdma, %struct.malo_descdma* %8, i32 0, i32 1
  %10 = load i32, i32* %9, align 4
  %11 = call i32 @bus_dmamap_unload(i32 %7, i32 %10)
  %12 = load %struct.malo_descdma*, %struct.malo_descdma** %4, align 8
  %13 = getelementptr inbounds %struct.malo_descdma, %struct.malo_descdma* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  %15 = load %struct.malo_descdma*, %struct.malo_descdma** %4, align 8
  %16 = getelementptr inbounds %struct.malo_descdma, %struct.malo_descdma* %15, i32 0, i32 2
  %17 = load i32, i32* %16, align 4
  %18 = load %struct.malo_descdma*, %struct.malo_descdma** %4, align 8
  %19 = getelementptr inbounds %struct.malo_descdma, %struct.malo_descdma* %18, i32 0, i32 1
  %20 = load i32, i32* %19, align 4
  %21 = call i32 @bus_dmamem_free(i32 %14, i32 %17, i32 %20)
  %22 = load %struct.malo_descdma*, %struct.malo_descdma** %4, align 8
  %23 = getelementptr inbounds %struct.malo_descdma, %struct.malo_descdma* %22, i32 0, i32 0
  %24 = load i32, i32* %23, align 4
  %25 = call i32 @bus_dma_tag_destroy(i32 %24)
  %26 = load %struct.malo_descdma*, %struct.malo_descdma** %4, align 8
  %27 = call i32 @memset(%struct.malo_descdma* %26, i32 0, i32 12)
  ret void
}

declare dso_local i32 @bus_dmamap_unload(i32, i32) #1

declare dso_local i32 @bus_dmamem_free(i32, i32, i32) #1

declare dso_local i32 @bus_dma_tag_destroy(i32) #1

declare dso_local i32 @memset(%struct.malo_descdma*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
